Fixed spacing and centering in navbar

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -27,6 +27,11 @@ p {
   justify-content: center;
 }
 
+.LinkUL {
+  margin: 0;
+  padding: 0;
+}
+
 .Link {
   margin-left: 1vw;
   margin-right: 1vw;
@@ -38,7 +43,7 @@ p {
 
 .ALink {
   margin-left: 1vw;
-  margin-right: 8vw;
+  margin-right: 1vw;
   color: black;
   text-decoration: none;
   font-size: 22px;
